evaluation/test_suite/negative/ub36/1.c
#include <stdio.h>

int main()
{
    double x = 1.2;
    printf("%d\n", (int)x);
}
